# order_service

./: Dockerfile  pyproject.toml
.github/workflows/: build-push-deploy.yml
alembic/versions/: 3114a3df5746_add_user_name_and_email_to_order_table.py  4972f9448be3_init.py  4bf673450a31_add_auction_invoice_table.py  58413e3a407f_unify_file_invoice_status_enum.py  638000244c83_remove_fee_type_from_order.py  766c81acefa6_init.py  f68c933c0a11_init.py
app/: config.py  main.py
app/core/: app_factory.py  logger.py  utils.py
app/database/: types.py
app/database/crud/: __init__.py  auction_invoice.py  base.py  custom_invoice.py  invoice_items.py  order.py  order_status_history.py
app/database/db/: session.py
app/database/models/: __init__.py  mixins.py
app/database/models/order/: __init__.py  auction_invoice.py  custom_invoice.py  invoice_items.py  order.py  (+1 more)
app/database/schemas/: __init__.py  auction_invoice.py  custom_invoice.py  invoice_items.py  order.py  order_status_history.py
app/enums/: auction.py  custom_invoice_status.py  order.py  vehicle_type.py
app/routers/: __init__.py
app/routers/private/: __init__.py
app/rpc_client/: auction_api.py  auth.py  base_client.py  buf.gen.yaml  calculator.py  files.py
app/schemas/: calculator.py  custom_invoice.py  destination.py  invoice_item.py  order.py
app/services/: create_order_from_lot.py  send_notification.py  user_info.py
app/services/invoice_generator/: create_invoice.py  generator.py  invoice_types.py
app/services/rabbit_service/: base.py  file_routing_keys.py  order_consumer.py  service.py
(+15 files in other folders)
